[workspace]
members = [
    "derivation-path",
    "ed25519-bip32",
    "remote-wallet",
    "wallet-test",
]

[workspace.package]
version = "0.0.1"
authors = ["Lane Rettig <lane@spacemesh.io>"]
repository = "https://github.com/spacemeshos/spacemesh-sdk"
homepage = "https://spacemesh.io/"
license = "MIT"
edition = "2021"

[workspace.dependencies]
derivation-path = "0.2.0"
ed25519-bip32 = { path = "ed25519-bip32", version = "=0.0.1" }
qstring = "0.7.2"
solana-sdk = "=1.14.17"
spacemesh-derivation-path = { path = "derivation-path", version = "=0.0.1" }
spacemesh-remote-wallet = { path = "remote-wallet", version = "=0.0.1" }
thiserror = "1.0.40"
uriparse = "0.6.4"