[workspace]
members = [
    "derivation-path",
    "ed25519-bip32",
    "remote-wallet",
]
resolver = "2"

[workspace.package]
version = "1.0.3"
authors = ["Lane Rettig <lane@spacemesh.io>"]
repository = "https://github.com/spacemeshos/spacemesh-sdk"
homepage = "https://spacemesh.io/"
license = "MIT"
edition = "2021"

[workspace.dependencies]
derivation-path = "0.2.0"
ed25519-bip32 = { path = "ed25519-bip32", version = "=1.0.3" }
qstring = "0.7.2"
solana-sdk = "=1.17.34"
spacemesh-derivation-path = { path = "derivation-path", version = "=1.0.3" }
spacemesh-remote-wallet = { path = "remote-wallet", version = "=1.0.3" }
thiserror = "1.0.69"
uriparse = "0.6.4"

[profile.release-clib]
inherits = "release"
strip = true
lto = true
rpath = true
