[package]
name = "spacemesh-remote-wallet"
description = "Hardware wallet support for Spacemesh applications"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
console = "0.15.5"
derivation-path = { workspace = true }
dialoguer = "0.10.4"
hidapi = { version = "2.2.0", default-features = false, optional = true }
log = "0.4.17"
num-derive = "0.3"
num-traits = "0.2"
parking_lot = "0.12"
qstring = { workspace = true }
semver = "1.0.17"
solana-sdk = { workspace = true }
spacemesh-derivation-path = { workspace = true }
spacemesh-sdkutils = { workspace = true }
thiserror = { workspace = true }
uriparse = { workspace = true }

[features]
default = ["linux-static-hidraw", "hidapi"]
linux-static-libusb = ["hidapi/linux-static-libusb"]
linux-static-hidraw = ["hidapi/linux-static-hidraw"]
linux-shared-libusb = ["hidapi/linux-shared-libusb"]
linux-shared-hidraw = ["hidapi/linux-shared-hidraw"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
