[package]
name = "spacemesh-remote-wallet"
description = "Hardware wallet support for Spacemesh applications"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
console = "0.15.7"
derivation-path = { workspace = true }
dialoguer = "0.10.4"
hidapi = { version = "2.4.0", default-features = false, optional = true }
log = "0.4.19"
num-derive = "0.4"
num-traits = "0.2"
parking_lot = "0.12"
qstring = { workspace = true }
semver = "1.0.18"
solana-sdk = { workspace = true }
spacemesh-derivation-path = { workspace = true }
thiserror = { workspace = true }
uriparse = { workspace = true }

[features]
default = ["linux-static-hidraw", "hidapi"]
linux-static-libusb = ["hidapi/linux-static-libusb"]
linux-static-hidraw = ["hidapi/linux-static-hidraw"]
linux-shared-libusb = ["hidapi/linux-shared-libusb"]
linux-shared-hidraw = ["hidapi/linux-shared-hidraw"]
test-hw-ledger = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
