[package]
name = "spacemesh-wallet-test"
description = "Hardware wallet support for Spacemesh applications"
authors = { workspace = true }
repository = { workspace = true }
homepage = "https://spacemesh.io/"
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
derivation-path = "0.2.0"
solana-remote-wallet = "1.15.2"
solana-sdk = "1.15.2"
