[package]
name = "spacemesh-wallet-test"
description = "Hardware wallet tests"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
derivation-path = "0.2.0"
spacemesh-remote-wallet = { workspace = true }
solana-sdk = "1.15.2"
