[package]
name = "spacemesh-wallet-test"
description = "Hardware wallet tests"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
derivation-path = { workspace = true }
spacemesh-derivation-path = { workspace = true }
spacemesh-remote-wallet = { workspace = true }
solana-sdk = { workspace = true }